--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,14 @@
   line-height: 1.3em;
   padding: 1.5rem 0;
 }
+.hero__btn {
+    background-color: #0288D1;
+    padding: 1rem 2rem;
+    border-radius: 20px;
+    color: white;
+    font-size: 1.3em;
+    font-weight: 600;
+}
 .hero__downloads {
   display: flex;
   align-items: center;
